@@ -1,3 +1,6 @@
+iibece 0.4 ():
+	- ignore errors about not matching certificate/hostname
+
 libece 0.3 (25/09/2013):
 	- fix certificate request encoding
 	- commands paths changed
